--- a/Fase 1/src/CMakeLists.txt
+++ b/Fase 1/src/CMakeLists.txt
@@ -42,8 +42,10 @@ if  (WIN32)
 	
 	
 	include_directories(${TOOLKITS_FOLDER}/glut )
-	target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 
-										  ${TOOLKITS_FOLDER}/glut/glut32.lib)
+	#target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} 
+	#									  ${TOOLKITS_FOLDER}/glut/glut32.lib)
+	target_link_libraries(generator.exe ${OPENGL_LIBRARIES} ${TOOLKITS_FOLDER}/glut/glut32.lib)
+	target_link_libraries(engine.exe ${OPENGL_LIBRARIES} ${TOOLKITS_FOLDER}/glut/glut32.lib)
 	
 	if (EXISTS "${TOOLKITS_FOLDER}/glut/glut32.dll" )
 		file(COPY ${TOOLKITS_FOLDER}/glut/glut32.dll DESTINATION ${CMAKE_BINARY_DIR})
