--- a/Fase_1/src/CMakeLists.txt
+++ b/Fase_1/src/CMakeLists.txt
@@ -23,17 +23,26 @@ add_library(
 # Biblioteca de parsing de XML
 add_library(
 	tinyXML
-	./tinyXML/tinyxml.cpp
-	./tinyXML/tinyxml.h
 	./tinyXML/tinystr.cpp
-	./tinyXML/tinystr.h
 	./tinyXML/tinyxmlerror.cpp
 	./tinyXML/tinyxmlparser.cpp
+	./tinyXML/tinystr.h
+	./tinyXML/tinyxml.h
+	./tinyXML/tinyxml.cpp
 )
+
+# Biblioteca de configuração do engine.
+add_library(
+	config_lib
+	./engine/config.cpp
+	./engine/config.hpp
+)
+
+target_link_libraries(config_lib tinyXML)
 
 # Associa a biblioteca das figuras e dos pontos aos executáveis
 target_link_libraries(generator.exe utils_lib)
-target_link_libraries(engine.exe utils_lib tinyXML)
+target_link_libraries(engine.exe utils_lib tinyXML config_lib)
 
 find_package(OpenGL REQUIRED)
 include_directories(${OpenGL_INCLUDE_DIRS})
