--- a/Fase_4/src/CMakeLists.txt
+++ b/Fase_4/src/CMakeLists.txt
@@ -51,12 +51,18 @@ add_library(
 	./engine/config.hpp
 )
 
+add_library(
+	lights_lib
+	./engine/light.cpp
+	./engine/light.hpp
+)
+
 # Associa a biblioteca de parsing XML à biblioteca de configuração do engine.
 target_link_libraries(config_lib tinyXML)
 target_link_libraries(config_lib utils_lib)
 # Associa a biblioteca das figuras e dos pontos aos executáveis
 target_link_libraries(generator.exe utils_lib)
-target_link_libraries(engine.exe utils_lib tinyXML config_lib)
+target_link_libraries(engine.exe utils_lib tinyXML config_lib lights_lib)
 
 if  (WIN32)
 
