Texturas (pouco testadas)

--- a/Fase_4/src/CMakeLists.txt
+++ b/Fase_4/src/CMakeLists.txt
@@ -110,8 +110,12 @@ else (WIN32) #Linux and Mac
 		include_directories(${GLEW_INCLUDE_DIRS})
 		link_libraries(${GLEW_LIBRARIES})
 	endif(NOT APPLE)
+
+	find_package(DevIL REQUIRED)
+	link_libraries(${IL_LIBRARIES} )
+	include_directories(${IL_INCLUDE_DIR})
 	
-	target_link_libraries(engine.exe ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} )
+	target_link_libraries(engine.exe ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${IL_LIBRARIES})
 	if(NOT GLUT_FOUND)
 	   message(ERROR ": GLUT not found!")
 	endif(NOT GLUT_FOUND)
